--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UdvBenefitsDb": "Server=localhost;Database=udv-benefits;Port=5432;User Id=postgres;Password=12345"
+    "UdvBenefitsDbLinux": "Server=localhost;Database=ssoncho;Port=5432;User Id=ssoncho;Password=sonya123",
+    "UdvBenefitsDb": "Server=95.82.231.190;Database=ssoncho;Port=5432;User Id=ssoncho;Password=sonya123"
   }
 }
